chore: Minor warning fixes