@@ -26,9 +26,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.lang.reflect.Field;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
@@ -46,7 +43,7 @@ public class K002 implements Kontextregel {
 
     private static final Logger LOG = LoggerFactory.getLogger(K002.class);
 
-    private static final Set<String> FIELDTYPES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("8419", "8421")));
+    private static final Set<String> FIELDTYPES = Set.of("8419", "8421");
 
     @Override
     public boolean isValid(Object owner) throws IllegalAccessException {
