@@ -4,9 +4,6 @@ import static libldt3.model.regel.kontext.KontextregelHelper.containsAnyString;
 import static libldt3.model.regel.kontext.KontextregelHelper.findFields;
 
 import java.lang.reflect.Field;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
@@ -27,7 +24,7 @@ public class K005 implements Kontextregel {
 
     private static final Logger LOG = LoggerFactory.getLogger(K005.class);
 
-    private static final Set<String> FIELDTYPES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("8000", "8401", "4121")));
+    private static final Set<String> FIELDTYPES = Set.of("8000", "8401", "4121");
 
     @Override
     public boolean isValid(Object owner) throws IllegalAccessException {
