@@ -27,9 +27,6 @@ import org.slf4j.LoggerFactory;
 import libldt3.model.enums.Dokumententyp;
 
 import java.lang.reflect.Field;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
@@ -40,7 +37,7 @@ public class K075 implements Kontextregel {
 
     private static final Logger LOG = LoggerFactory.getLogger(K075.class);
 
-    private static final Set<String> FIELDTYPES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("9970", "6327")));
+    private static final Set<String> FIELDTYPES = Set.of("9970", "6327");
 
     @Override
     public boolean isValid(Object owner) throws IllegalAccessException {
