@@ -25,9 +25,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.lang.reflect.Field;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
@@ -42,8 +39,7 @@ public class K076 implements Kontextregel {
 
     private static final Logger LOG = LoggerFactory.getLogger(K076.class);
 
-    private static final Set<String> FIELDTYPES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList("3412", "3413",
-            "3414", "3415", "3416", "3417", "3418", "3419", "8225")));
+    private static final Set<String> FIELDTYPES = Set.of("3412", "3413", "3414", "3415", "3416", "3417", "3418", "3419", "8225");
 
     @Override
     public boolean isValid(Object owner) throws IllegalAccessException {
